@@ -69,6 +69,14 @@ be out of screen bounds).
 default: 0,0 (screen top left corner)
 .RE
 .TP
+\fB\-b\fR, \fB\-\-border\fR=\fIN\fR
+.RS
+Tickness of the screen region border delimiter. Valid values are \fI0\fR to
+\fI128\fR. A value of \fI0\fR disables showing the border delimiter.
+.PP
+default: 2
+.RE
+.TP
 \fB\-S\fR, \fB\-\-select\-region\fR
 .RS
 Select with mouse the screen region to record. Use a single mouse click to
