@@ -7,6 +7,7 @@ https://github.com/dbermond/screencast/
 
 ### version next
 - fix: security issue with temporary directory (https://github.com/dbermond/screencast/issues/3)
+- new option: select tickness of the screen region border delimiter
 - tests: use less restrictive encoders
 - tests: allow to run tests without audio input (AUDIOIN='none')
 
